[gd_scene load_steps=11 format=3 uid="uid://dkes5vb7qku3u"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_jw0eu"]
[ext_resource type="TileSet" uid="uid://dtk1atu1rhq8m" path="res://tilesets/tower_tileset.tres" id="2_6a0rc"]
[ext_resource type="PackedScene" uid="uid://n615rx02auyl" path="res://ui/ui.tscn" id="3_hcgcw"]
[ext_resource type="PackedScene" uid="uid://bpl2vk3ncc0mb" path="res://items/start_zone.tscn" id="5_rl741"]
[ext_resource type="PackedScene" uid="uid://kib21yto7yik" path="res://player/player.tscn" id="6_2dplg"]
[ext_resource type="PackedScene" uid="uid://nfjwcl3nv5kx" path="res://items/spikes.tscn" id="8_uva41"]
[ext_resource type="PackedScene" uid="uid://btc0hm6mkex5a" path="res://items/checkpoint.tscn" id="9_11xhe"]
[ext_resource type="PackedScene" uid="uid://b6eal38smspdb" path="res://characters/enemy/snail.tscn" id="9_s5ish"]
[ext_resource type="PackedScene" uid="uid://clx2x57iquf2" path="res://items/moving_platform.tscn" id="10_1pbje"]
[ext_resource type="PackedScene" uid="uid://dab4gygvcm0f0" path="res://levels/levels_1/backgrounds/parallax_background.tscn" id="15_x06qf"]

[node name="level_1" type="Node2D"]
script = ExtResource("1_jw0eu")
level_name = "Level 1"
level_id = "level_1"
unlocked_level = "level_2"

[node name="TileMap" type="TileMap" parent="."]
z_index = 2
tile_set = ExtResource("2_6a0rc")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(4325370, 262150, 6, 4259834, 196614, 6, 4194298, 196614, 6, 4128762, 196614, 6, 4063226, 196614, 6, 3997690, 196614, 6, 3932154, 196614, 6, 3866618, 196614, 6, 3801082, 196614, 6, 3735546, 262150, 6, 4194304, 6, 9, 3670021, 262150, 6, 3735557, 262150, 6, 3801093, 196614, 6, 3866629, 262150, 6, 3932165, 262150, 6, 3997701, 262150, 6, 4063237, 196614, 6, 4128773, 196614, 6, 4194309, 196614, 6, 4259845, 262150, 6, 4325381, 262150, 6, 3997697, 262150, 6, 4063233, 196614, 6, 4128769, 262150, 6, 4194305, 131078, 7, 3932161, 196614, 6, 3866625, 262150, 6, 3801089, 262150, 6, 3735553, 196614, 6, 3670017, 196614, 6, 3670010, 262150, 6, 3604474, 196614, 6, 3538938, 262150, 6, 3473402, 196614, 6, 3407866, 262150, 6, 3342330, 6, 6, 3276794, 6, 6, 3211258, 262150, 5, 3604485, 196614, 6, 3538949, 196614, 6, 3473413, 262150, 6, 3407877, 262150, 6, 3342341, 262150, 6, 3276805, 196614, 6, 3211269, 262150, 6, 3145733, 262150, 6, 3080197, 262150, 5, 3604481, 196614, 5, 3407869, 262150, 7, 3342333, 262150, 6, 3276797, 262150, 5, 3342331, 131078, 7, 3276795, 131078, 5, 4390906, 196614, 6, 5505018, 196614, 6, 5439482, 262150, 6, 5373946, 196614, 6, 5308410, 196614, 6, 5242874, 262150, 6, 5177338, 262150, 6, 5111802, 262150, 6, 5046266, 262150, 6, 4980730, 196614, 6, 4915194, 196614, 6, 4849658, 262150, 6, 4784122, 196614, 6, 4718586, 262150, 6, 4653050, 262150, 6, 4587514, 262150, 6, 4521978, 262150, 6, 4456442, 262150, 6, 5373957, 262150, 6, 5308421, 196614, 6, 5242885, 262150, 6, 5177349, 196614, 6, 5111813, 262150, 6, 5046277, 196614, 6, 4980741, 196614, 6, 4915205, 196614, 6, 4849669, 262150, 6, 4784133, 196614, 6, 4718597, 196614, 6, 4653061, 196614, 6, 4587525, 262150, 6, 4521989, 196614, 6, 4456453, 196614, 6, 4390917, 262150, 6, 6225914, 262150, 6, 6160378, 196614, 6, 6094842, 196614, 6, 6029306, 262150, 6, 5963770, 262150, 6, 5898234, 262150, 6, 5832698, 262150, 6, 5767162, 196614, 6, 5701626, 196614, 6, 5636090, 196614, 6, 5570554, 196614, 6, 6160389, 196614, 6, 6094853, 262150, 6, 6029317, 196614, 6, 5963781, 196614, 6, 5898245, 196614, 6, 5832709, 262150, 6, 5767173, 262150, 6, 5701637, 262150, 6, 5636101, 262150, 6, 5570565, 262150, 6, 5505029, 196614, 6, 5439493, 196614, 6, 6815738, 262150, 6, 6750202, 196614, 6, 6684666, 262150, 6, 6619130, 196614, 6, 6553594, 196614, 6, 6488058, 262150, 6, 6422522, 196614, 6, 6356986, 262150, 6, 6291450, 262150, 6, 6815749, 196614, 6, 6750213, 196614, 6, 6684677, 196614, 6, 6619141, 131078, 6, 6553605, 196614, 6, 6488069, 196614, 6, 6422533, 196614, 6, 6356997, 196614, 6, 6291461, 196614, 6, 6225925, 262150, 6, 7405562, 6, 7, 7340026, 196614, 6, 7274490, 196614, 6, 7208954, 6, 6, 7143418, 6, 6, 7077882, 6, 6, 7012346, 6, 6, 6946810, 6, 6, 6881274, 6, 6, 7340037, 131078, 9, 7340036, 65542, 8, 7340035, 65542, 8, 7340034, 65542, 8, 7340033, 65542, 9, 7340032, 65542, 9, 7405567, 65542, 9, 7405566, 65542, 9, 7405565, 65542, 8, 7405564, 65542, 8, 7405563, 65542, 9, 7143429, 131078, 7, 7077893, 196614, 6, 7012357, 262150, 6, 6946821, 262150, 6, 6881285, 262150, 6, 7143428, 65542, 8, 7143427, 6, 8, 7208955, 131078, 7, 7143420, 131078, 7, 7077885, 65542, 7, 7077886, 65542, 7, 7077887, 131078, 7, 7012351, 131078, 5, 7012350, 65542, 5, 7012349, 65542, 5, 7012348, 65542, 5, 7012347, 65542, 6, 7077883, 65542, 6, 7077884, 65542, 6, 7143419, 65542, 6, 6881275, 131078, 5, 6946811, 131078, 6, 6619140, 65542, 8, 6619139, 6, 9)
layer_1/name = "rocks"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "background"
layer_2/z_index = -4
layer_2/tile_data = PackedInt32Array()

[node name="ui" parent="." instance=ExtResource("3_hcgcw")]

[node name="start_zone" parent="." instance=ExtResource("5_rl741")]

[node name="player" parent="." instance=ExtResource("6_2dplg")]
position = Vector2(0, 1792)

[node name="camera_follow" parent="player" index="6"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 1792)
zoom = Vector2(6, 6)
process_callback = 0
position_smoothing_enabled = true

[node name="spikes" type="Node2D" parent="."]

[node name="spikes" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(24, 880)

[node name="spikes39" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-32, 1792)

[node name="spikes4" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(8, 1024)

[node name="spikes2" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-64, 808)
rotation = 1.5708

[node name="spikes3" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-64, 792)
rotation = 1.5708

[node name="spikes5" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 840)
rotation = 1.5708

[node name="spikes6" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 824)
rotation = 1.5708

[node name="spikes7" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 872)
rotation = 1.5708

[node name="spikes8" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 856)
rotation = 1.5708

[node name="spikes9" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 904)
rotation = 1.5708

[node name="spikes10" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 888)
rotation = 1.5708

[node name="spikes11" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 936)
rotation = 1.5708

[node name="spikes12" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 920)
rotation = 1.5708

[node name="spikes13" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 968)
rotation = 1.5708

[node name="spikes14" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 952)
rotation = 1.5708

[node name="spikes15" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 1000)
rotation = 1.5708

[node name="spikes16" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 984)
rotation = 1.5708

[node name="spikes17" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 1032)
rotation = 1.5708

[node name="spikes18" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(-80, 1016)
rotation = 1.5708

[node name="spikes19" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 1032)
rotation = 1.5708

[node name="spikes20" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 1016)
rotation = 1.5708

[node name="spikes21" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 1000)
rotation = 1.5708

[node name="spikes22" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 984)
rotation = 1.5708

[node name="spikes23" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 968)
rotation = 1.5708

[node name="spikes24" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 952)
rotation = 1.5708

[node name="spikes25" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 936)
rotation = 1.5708

[node name="spikes26" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 920)
rotation = 1.5708

[node name="spikes27" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 904)
rotation = 1.5708

[node name="spikes28" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(32, 888)
rotation = 1.5708

[node name="spikes29" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 1032)
rotation = 4.71239

[node name="spikes30" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 1016)
rotation = 4.71239

[node name="spikes31" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 1000)
rotation = 4.71239

[node name="spikes32" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 984)
rotation = 4.71239

[node name="spikes33" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 968)
rotation = 4.71239

[node name="spikes34" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 952)
rotation = 4.71239

[node name="spikes35" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 936)
rotation = 4.71239

[node name="spikes36" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 920)
rotation = 4.71239

[node name="spikes37" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 904)
rotation = 4.71239

[node name="spikes38" parent="spikes" instance=ExtResource("8_uva41")]
position = Vector2(80, 888)
rotation = 4.71239

[node name="enemies" type="Node2D" parent="."]

[node name="snail" parent="enemies" instance=ExtResource("9_s5ish")]

[node name="platforms" type="Node2D" parent="."]

[node name="moving_platform" parent="platforms" instance=ExtResource("10_1pbje")]

[node name="checkpoints" type="Node2D" parent="."]

[node name="checkpoint" parent="checkpoints" instance=ExtResource("9_11xhe")]
position = Vector2(-40, 784)

[node name="checkpoint2" parent="checkpoints" instance=ExtResource("9_11xhe")]
position = Vector2(88, 752)

[node name="parallax_background" parent="." instance=ExtResource("15_x06qf")]
offset = Vector2(0, -2000)
transform = Transform2D(1, 0, 0, 1, 0, -2000)

[connection signal="respawn" from="player" to="." method="_on_player_respawn"]
[connection signal="activate_checkpoint" from="checkpoints/checkpoint" to="." method="_on_checkpoint_activate_checkpoint"]
[connection signal="activate_checkpoint" from="checkpoints/checkpoint2" to="." method="_on_checkpoint_activate_checkpoint"]

[editable path="player"]
